--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,18 +34,14 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: |
-            services/api-gateway/package-lock.json
-            services/user-service/package-lock.json
 
       - name: Install API Gateway dependencies
         working-directory: ./services/api-gateway
-        run: npm ci
+        run: npm install
 
       - name: Install User Service dependencies
         working-directory: ./services/user-service
-        run: npm ci
+        run: npm install
 
       - name: Build API Gateway
         working-directory: ./services/api-gateway
@@ -67,12 +63,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install
 
       - name: Build frontend
         working-directory: ./frontend
