--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,11 +37,11 @@ jobs:
 
       - name: Install API Gateway dependencies
         working-directory: ./services/api-gateway
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Install User Service dependencies
         working-directory: ./services/user-service
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build API Gateway
         working-directory: ./services/api-gateway
@@ -66,7 +66,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build frontend
         working-directory: ./frontend
