--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,28 +60,10 @@ jobs:
           npm run build
           echo "✅ Frontend built successfully"
 
-  docker-build:
-    name: Docker Build Test
+  success:
+    name: All Builds Passed
     runs-on: ubuntu-latest
     needs: [build-backend, build-frontend]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Test Docker Compose
-        run: |
-          echo "🐳 Testing Docker Compose configuration..."
-          docker-compose config
-          echo "✅ Docker Compose configuration is valid"
-
-  success:
-    name: All Checks Passed
-    runs-on: ubuntu-latest
-    needs: [build-backend, build-frontend, docker-build]
 
     steps:
       - name: Success Message
@@ -89,4 +71,4 @@ jobs:
           echo "🎉 All builds passed successfully!"
           echo "✅ Backend services built"
           echo "✅ Frontend built"
-          echo "✅ Docker configuration valid"
+          echo "✅ Ready for deployment"
