--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "axios": "^1.6.0",
+    "socket.io-client": "^4.6.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0"
   },
