--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -17,8 +17,11 @@
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.0",
+    "@nestjs/websockets": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "socket.io": "^4.6.0",
     "typeorm": "^0.3.17",
     "pg": "^8.11.0",
     "bcrypt": "^5.1.1",
