--- a/services/api-gateway/Dockerfile
+++ b/services/api-gateway/Dockerfile
@@ -3,9 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package files
-COPY package.json ./
+COPY package*.json ./
 
-# Install dependencies with clean cache
+# Install dependencies
 RUN npm install --legacy-peer-deps
 
 # Copy source code
