--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -28,7 +28,9 @@
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "cloudinary": "^1.41.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -37,6 +39,7 @@
     "@types/node": "^20.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^4.0.0",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
