feat: Add LinkedIn-inspired landing page with Google OAuth integration
- Redesigned landing page with professional LinkedIn-style UI
- Added Google OAuth 'Continue with Google' button
- Implemented Google OAuth backend strategy and routes
- Created OAuth callback handler for frontend
- Added comprehensive FAQ accordion section
- Integrated user-provided images (Web_Devlopment_Illustration_01.jpg, web design_#4.jpg)
- Added multiple descriptive sections (Features, Communities, CTA)
- Updated environment variables with Google OAuth credentials
- Created deployment guides for Vercel + Render
- Added helper scripts for production URL configuration

Features:
- Google OAuth sign-up/login
- Email sign-up/login (existing)
- Responsive design (mobile, tablet, desktop)
- Professional color scheme (blue/purple gradients)
- Smooth animations and transitions
- SEO-friendly structure

Documentation:
- GOOGLE_OAUTH_SETUP.md - OAuth setup guide
- GOOGLE_OAUTH_DEPLOYMENT.md - Production deployment guide
- OAUTH_URLS_REFERENCE.md - Quick URL reference
- LANDING_PAGE_UPDATE.md - Landing page details
- QUICK_START.md - Fast setup guide
- update-production-urls.sh - Helper script

OAuth Credentials:
- Client ID: 1075769500266-h4qk4amb9du8pl4tnk3beht03dak9sju.apps.googleusercontent.com
- Configured for local and production environments
- Callback URLs configured for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -37,6 +37,20 @@ services:
           property: database
       - key: JWT_SECRET
         generateValue: true
+      - key: CLOUDINARY_CLOUD_NAME
+        value: dgl4cpuik
+      - key: CLOUDINARY_API_KEY
+        value: 637454513411741
+      - key: CLOUDINARY_API_SECRET
+        value: 7JHtL4bTAYqwq7RaQM60Ocf43fw
+      - key: GOOGLE_CLIENT_ID
+        value: 1075769500266-h4qk4amb9du8pl4tnk3beht03dak9sju.apps.googleusercontent.com
+      - key: GOOGLE_CLIENT_SECRET
+        value: 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
+      - key: GOOGLE_CALLBACK_URL
+        sync: false
+      - key: FRONTEND_URL
+        sync: false
         
   # API Gateway
   - type: web
