--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-socket.io": "^10.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.6.0",
     "typeorm": "^0.3.17",
     "pg": "^8.11.0",
@@ -39,6 +40,7 @@
     "@types/node": "^20.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/passport-jwt": "^4.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
