fix: Update render.yaml to use native Node runtime instead of Docker
- Changed 'env: node' to 'runtime: node' for explicit Node environment
- Replaced bash script with direct npm commands in buildCommand
- This prevents Render from trying to use Docker build
- Fixes 'Dockerfile not found' error during deployment

The services will now build using Render's native Node.js environment
instead of attempting Docker builds.

--- a/render.yaml
+++ b/render.yaml
@@ -7,10 +7,10 @@ services:
   # User Service
   - type: web
     name: pronet-user-service
-    env: node
+    runtime: node
     plan: free
     rootDir: services/user-service
-    buildCommand: bash render-build.sh
+    buildCommand: npm install --legacy-peer-deps && npm run build
     startCommand: npm run start
     envVars:
       - key: PORT
@@ -55,10 +55,10 @@ services:
   # API Gateway
   - type: web
     name: pronet-api-gateway
-    env: node
+    runtime: node
     plan: free
     rootDir: services/api-gateway
-    buildCommand: bash render-build.sh
+    buildCommand: npm install --legacy-peer-deps && npm run build
     startCommand: npm run start
     envVars:
       - key: PORT
