chore: Configure OAuth secrets to be set manually in Render Dashboard
- Set GOOGLE_CLIENT_ID and GOOGLE_CLIENT_SECRET to sync: false
- Prevents secrets from being committed to repository
- Secrets must be added manually in Render Dashboard Environment tab

New OAuth Client ID: 716006181490-r1fvklb9s9b26nk7jdmf69vf315b9uaa

--- a/render.yaml
+++ b/render.yaml
@@ -44,9 +44,9 @@ services:
       - key: CLOUDINARY_API_SECRET
         value: 7JHtL4bTAYqwq7RaQM60Ocf43fw
       - key: GOOGLE_CLIENT_ID
-        value: 1075769500266-9sq71r5tvc19m2b6bfb70kpqb1949g7q.apps.googleusercontent.com
+        sync: false
       - key: GOOGLE_CLIENT_SECRET
-        value: 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
+        sync: false
       - key: GOOGLE_CALLBACK_URL
         value: https://pronet-user-service.onrender.com/auth/google/callback
       - key: FRONTEND_URL
