Add email service for OTP delivery
- Install nodemailer for email sending
- Create EmailService with professional HTML template
- Integrate email service into auth flow
- Add EMAIL_USER and EMAIL_PASSWORD environment variables
- Fallback to console logging if email fails
- Support Gmail with App Password authentication
- Include setup guide for email configuration

--- a/render.yaml
+++ b/render.yaml
@@ -51,6 +51,10 @@ services:
         value: https://pronet-user-service.onrender.com/auth/google/callback
       - key: FRONTEND_URL
         value: https://pro-net-ten.vercel.app
+      - key: EMAIL_USER
+        sync: false
+      - key: EMAIL_PASSWORD
+        sync: false
         
   # API Gateway
   - type: web
