--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -31,7 +31,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "cloudinary": "^1.41.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,6 +43,7 @@
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
