--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -19,6 +19,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "axios": "^1.6.0",
+    "multer": "^1.4.5-lts.1",
+    "form-data": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -28,6 +30,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.0",
+    "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
