--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -19,6 +19,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-google-oauth20": "^2.0.0",
