--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
+    "@daily-co/daily-react": "^0.24.0",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.554.0",
     "next": "14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
