--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -11,40 +11,42 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/websockets": "^10.0.0",
-    "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.0",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^4.6.0",
-    "typeorm": "^0.3.17",
-    "pg": "^8.11.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.0.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.6.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/passport-jwt": "^4.0.0",
-    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/express": "^4.17.17",
     "@types/multer": "^1.4.11",
+    "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
