--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
+    "@daily-co/daily-react": "^0.24.0",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
