--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.85.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
