--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@stream-io/node-sdk": "^0.7.21",
+    "@stream-io/video-react-sdk": "^1.27.2",
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
