--- a/services/user-service/package.json
+++ b/services/user-service/package.json
@@ -21,6 +21,7 @@
     "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
+    "@stream-io/node-sdk": "^0.7.21",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
