--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -36,5 +36,8 @@
     "eslint": "^8.42.0",
     "prettier": "^3.0.0",
     "typescript": "^5.1.3"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
