revert: switch back to Render, add health check and Resend config

--- a/render.yaml
+++ b/render.yaml
@@ -51,9 +51,7 @@ services:
         value: https://pronet-user-service.onrender.com/auth/google/callback
       - key: FRONTEND_URL
         value: https://pro-net-ten.vercel.app
-      - key: EMAIL_USER
-        sync: false
-      - key: EMAIL_PASSWORD
+      - key: RESEND_API_KEY
         sync: false
         
   # API Gateway
