--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -2,10 +2,14 @@
 # Copy these to Vercel Dashboard → Settings → Environment Variables
 
 # API Gateway URL (for regular API calls)
-NEXT_PUBLIC_API_URL=https://pronet-api-gateway.onrender.com
+# Set these to your Koyeb app URLs (or your custom domains).
+# Example: https://pronet-api-gateway-<yourname>.koyeb.app
+NEXT_PUBLIC_API_URL=https://pronet-api-gateway.<your-koyeb-subdomain>.koyeb.app
 
 # WebSocket URL (for real-time features)
-NEXT_PUBLIC_WS_URL=https://pronet-user-service.onrender.com
+# Example: https://pronet-user-service-<yourname>.koyeb.app
+NEXT_PUBLIC_WS_URL=https://pronet-user-service.<your-koyeb-subdomain>.koyeb.app
 
 # Auth URL (for OAuth - goes directly to user service)
-NEXT_PUBLIC_AUTH_URL=https://pronet-user-service.onrender.com
+# If you use an API gateway that proxies auth, you can set this to NEXT_PUBLIC_API_URL instead.
+NEXT_PUBLIC_AUTH_URL=https://pronet-user-service.<your-koyeb-subdomain>.koyeb.app
