--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -1,15 +1,17 @@
-# Production Environment Variables for Vercel
-# Copy these to Vercel Dashboard → Settings → Environment Variables
+## Production environment variables (Vercel → Settings → Environment Variables)
+# Point these to your deployed gateway on Koyeb (or your custom domain).
 
-# API Gateway URL (for regular API calls)
-# Set these to your Koyeb app URLs (or your custom domains).
-# Example: https://pronet-api-gateway-<yourname>.koyeb.app
-NEXT_PUBLIC_API_URL=https://pronet-api-gateway.<your-koyeb-subdomain>.koyeb.app
+# Current deployed gateway (example)
+NEXT_PUBLIC_API_URL=https://hilarious-zuzana-pronet123-d6e31322.koyeb.app
 
-# WebSocket URL (for real-time features)
-# Example: https://pronet-user-service-<yourname>.koyeb.app
-NEXT_PUBLIC_WS_URL=https://pronet-user-service.<your-koyeb-subdomain>.koyeb.app
+# WebSocket URL (real-time chat/notifications)
+# If websockets are on the same host, you can reuse the gateway host with wss://
+NEXT_PUBLIC_WS_URL=wss://hilarious-zuzana-pronet123-d6e31322.koyeb.app
 
-# Auth URL (for OAuth - goes directly to user service)
-# If you use an API gateway that proxies auth, you can set this to NEXT_PUBLIC_API_URL instead.
-NEXT_PUBLIC_AUTH_URL=https://pronet-user-service.<your-koyeb-subdomain>.koyeb.app
+# Auth base URL (use gateway if it proxies auth)
+NEXT_PUBLIC_AUTH_URL=https://hilarious-zuzana-pronet123-d6e31322.koyeb.app
+
+# If you move to a custom domain, replace the above with your own, e.g.:
+# NEXT_PUBLIC_API_URL=https://api.yourdomain.com
+# NEXT_PUBLIC_WS_URL=wss://api.yourdomain.com
+# NEXT_PUBLIC_AUTH_URL=https://api.yourdomain.com
