--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -1,15 +1,15 @@
 ## Production environment variables (Vercel → Settings → Environment Variables)
-# Point these to your deployed gateway on Koyeb (or your custom domain).
+# Point these to your deployed gateway on Render.
 
-# Current deployed gateway (example)
-NEXT_PUBLIC_API_URL=https://hilarious-zuzana-pronet123-d6e31322.koyeb.app
+# Current deployed gateway (example - Update with your actual Render URL)
+NEXT_PUBLIC_API_URL=https://pronet-api-gateway.onrender.com
 
 # WebSocket URL (real-time chat/notifications)
 # If websockets are on the same host, you can reuse the gateway host with wss://
-NEXT_PUBLIC_WS_URL=wss://hilarious-zuzana-pronet123-d6e31322.koyeb.app
+NEXT_PUBLIC_WS_URL=wss://pronet-api-gateway.onrender.com
 
 # Auth base URL (use gateway if it proxies auth)
-NEXT_PUBLIC_AUTH_URL=https://hilarious-zuzana-pronet123-d6e31322.koyeb.app
+NEXT_PUBLIC_AUTH_URL=https://pronet-api-gateway.onrender.com
 
 # If you move to a custom domain, replace the above with your own, e.g.:
 # NEXT_PUBLIC_API_URL=https://api.yourdomain.com
