--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Deploy to Render
 
 on:
   push:
@@ -7,29 +7,24 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to Server
+    name: Trigger Render Deployment
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Deploy notification
-        run: |
-          echo "🚀 Deployment workflow triggered"
-          echo "Branch: ${{ github.ref }}"
-          echo "Commit: ${{ github.sha }}"
+      - name: Deploy API Gateway
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ secrets.RENDER_DEPLOY_HOOK_URL_GATEWAY }}
+          method: 'GET'
+          preventFailureOnNoResponse: 'true'
           
-      # Add your deployment steps here
-      # Example: SSH to server and pull latest code
-      # - name: Deploy to server
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     script: |
-      #       cd /path/to/pronet
-      #       git pull origin main
-      #       docker-compose down
-      #       docker-compose up --build -d
+      - name: Deploy User Service
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ secrets.RENDER_DEPLOY_HOOK_URL_USER_SERVICE }}
+          method: 'GET'
+          preventFailureOnNoResponse: 'true'
+          
+      - name: Deployment Notification
+        run: echo "✅ Triggered deployment on Render"
