--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
         value: 3001
       - key: NODE_ENV
         value: production
+      - key: RENDER
+        value: true
       - key: DATABASE_SSL
         value: true
       - key: DATABASE_HOST
